clusters/cluster0/kubernetes/apps/gregbob/gregbob/blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: gregbob
spec:
  type: ClusterIP
  selector:
    app: blog
  ports:
    - name: blog-port
      port: 8080
      protocol: TCP
